# litellm-rust

./: .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  lib.rs  router.rs  types.rs
src/providers/: gemini.rs  openai_compat.rs
tests/: integration_providers.rs
