[package]
name = "litellm-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/avivsinai/litellm-rust"
homepage = "https://github.com/avivsinai/litellm-rust"
description = "Minimal Rust SDK port of LiteLLM – unified interface for chat, embeddings, images, and video across OpenAI-compatible, Anthropic, Gemini, and xAI providers"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic", "gemini"]
categories = ["api-bindings", "asynchronous"]
authors = ["Aviv Sinai"]
exclude = ["/tests", "/.github", "/.gitleaks.toml", "/CLAUDE.md", "/AGENTS.md"]

[lib]
name = "litellm_rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
bytes = "1.5"
futures-util = "0.3"
async-stream = "0.3"
base64 = "0.22"
mime_guess = "2.0"

[dev-dependencies]
serde_json = "1.0"
wiremock = "0.6"
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"
items_after_test_module = "allow"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
